--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ streamlit>=1.31.1
 tensorflow>=2.11.0
 numpy>=1.21.0
 nltk
-spacy
 contractions
 pickle-mixin
+spacy
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl
+
